# bitboards-magic

./: .gitignore  Cargo.toml  README.md
magic/: keep_smallest.py
src/: main.rs
src/gen_magic/: main.rs
src/magic_management/: main.rs
src/table_creation/: main.rs
