[package]
name = "chess-magic"
version = "0.1.0"
authors = ["Theo Barollet <theo.barollet@ensimag.fr>"]

[dependencies]
rand = "0.5.5"
find_folder = "*"
rayon = "*"
array-init = "*"
itertools = "0.7.8"

[[bin]]
name = "gen_magic"
path = "src/gen_magic/main.rs"

[[bin]]
name = "magic_management"
path = "src/magic_management/main.rs"

[[bin]]
name = "table_creation"
path = "src/table_creation/main.rs"
